# SUIperCHAT

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  todo.md
.cursor/rules/: rust_coding_rule.mdc  uiux.mdc
.github/workflows/: release.yml
contract/: README.md
contract/suiperchat/: Move.toml  publish_data.md
contract/suiperchat/sources/: payment.move
contract/suiperchat/tests/: payment_tests.move
docs/: OBS背景スパチャ表示技術_deepresearch.md  obs_url_dynamic_display_plan.md  prisma_dependency_removal_plan.md  roo_task_apr-18-2025_4-48-47-pm.md  sqlite_integration_plan.md  sui_sdk_integration_plan.md  viewer_notip_comment_plan.md  websocket_external_access_plan.md  websocket_external_access_plan_v6_migration.md  websocket_message_fix_plan.md  websocket_provider_refactoring_plan.md  要件定義.md
presentation/: .gitignore  build-standalone.js  index-en.html  index.html  styles-en.css  styles.css
presentation/slides/: slide0.html  slide1.html  slide10.html  slide2.html  slide3.html  slide4.html  slide5.html  slide6.html  slide7.html  slide8.html  slide9.html
presentation/slides-en/: slide0.html  slide1.html  slide10.html  slide2.html  slide3.html  slide4.html  slide5.html  slide6.html  slide7.html  slide8.html  slide9.html
src/ws_server/: session.rs
suiperchat_streamer_app/: .gitignore  CLAUDE.md  README.md  dev.db  next.config.ts  package-lock.json  package.json
suiperchat_streamer_app/prisma/: dev.db  dev.db-journal  dev.db-shm  dev.db-wal  schema.prisma
suiperchat_streamer_app/prisma/migrations/20250408024801_init_message_session_schema/: migration.sql
suiperchat_streamer_app/prisma/migrations/20250421135744_update_id_to_uuid/: migration.sql
suiperchat_streamer_app/prisma/migrations/20250421143505_rename_session_start_time/: migration.sql
suiperchat_streamer_app/prisma/migrations/20250421150103_rename_session_end_time/: migration.sql
suiperchat_streamer_app/src-tauri/: Cargo.toml  build.rs  dev.db-shm  dev.db-wal  tauri.conf.json
suiperchat_streamer_app/src-tauri/binaries/: README.md
suiperchat_streamer_app/src-tauri/capabilities/: http.json  shell.json
suiperchat_streamer_app/src-tauri/icons/: icon.icns
suiperchat_streamer_app/src-tauri/src/: cloudflared_manager.rs  commands.rs  database.rs  db_models.rs  lib.rs  main.rs  state.rs  types.rs  ws_server.rs
suiperchat_streamer_app/src-tauri/src/commands/: app_info.rs  connection.rs  greeting.rs  history.rs  mod.rs  server.rs  wallet.rs  youtube.rs
suiperchat_streamer_app/src-tauri/src/static/obs/: index.html  script.js  status.html  styles.css
suiperchat_streamer_app/src-tauri/src/websocket/: client.rs  message.rs  mod.rs  server.rs
suiperchat_streamer_app/src-tauri/src/ws_server/: client_info.rs  connection_manager.rs  ip_utils.rs  mod.rs  routes.rs  server_manager.rs  server_utils.rs  session.rs  tunnel.rs  types.rs
suiperchat_streamer_app/src/app/: globals.css  layout.tsx  page.tsx
suiperchat_streamer_app/src/components/: TauriDemo.tsx
suiperchat_streamer_app/src/lib/: tauriUtils.ts  types.ts
suiperchat_streamer_app/src/lib/utils/: tauri.ts
viewer/: README.md  next.config.ts  package-lock.json  package.json
viewer/src/app/: globals.css  layout.tsx  page.tsx
viewer/src/components/: home-page.tsx
viewer/src/context/: UserContext.tsx
viewer/src/hooks/: useAspectRatio.ts  useMobileKeyboard.ts  useWebSocketConnect.ts  useWebSocketMessage.ts
viewer/src/lib/: constants.ts  server-config.ts  utils.ts
(+35 files in other folders)
