[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5", features = [] }
tauri-plugin-log = "2.0.0-rc"
chrono = { version = "0.4", features = ["serde"] }

# WebSocketサーバー実装に必要な依存関係
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
futures-channel = "0.3"
lazy_static = "1"
url = "2.5"
actix-web = "4.10"
actix-web-actors = "4.3"
actix = "0.13"
actix-files = "0.6"
futures = "0.3"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
once_cell = "1.21.3"
